--- a/.github/workflows/run_python.yml
+++ b/.github/workflows/run_python.yml
@@ -3,16 +3,25 @@ name: Run Python Script
 on:
   push:
     branches: [ main ]
-  workflow_dispatch:  # Позволяет запускать вручную через UI GitHub
+  workflow_dispatch:
 
 jobs:
   run-script:
     runs-on: ubuntu-latest
     steps:
+
       - uses: actions/checkout@v4
+
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: '3.10'  # или другая версия
+
+
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+
+
       - name: Run script
         run: python habr.py
